src/snapshots/afrotd__parser__tests__rule_1.2.7.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 7
title: Line to Gain- und Downanzeiger
text: "Der offizielle Line to Gain- (Meterkette) und der Downanzeiger sollen grundsätzlich 2 m außerhalb der Seitenlinie gegenüber der Press Box postiert werden. Davon ausgenommen sind Stadien, in denen der bauliche Zustand das nicht gestattet.\n\ta) Wenn eine Kette benutzt wird, muss diese an zwei Stangen befestigt sein, die nicht niedriger als 1,5 m sein dürfen. Die Innenseiten der Stangen müssen genau 1/12 des Feldes, jedoch nicht weiter als 9,14 m (10 Yards), voneinander entfernt sein, wenn die Kette gespannt wird.\n\tb) Der Downanzeiger muss an einer Stange befestigt sein, die nicht niedriger als 1,5 m ist und soll ungefähr 2 m außerhalb der Seitenlinie gegenüber der Press Boss bedient werden. Die Press Box ist ein Bereich des Stadions, in dem sich Journalisten oder Stadionsprecher aufhalten können.\n\tc) Ein inoffizieller zusätzlicher Anzeiger, der die Line to Gain anzeigt, und ein inoffizieller Downanzeiger dürfen auf der gegenüberliegenden Seitenlinie benutzt werden, nur müssen sie 2 m von dieser Seitenlinie entfernt sein.\n\td) Empfohlen sind inoffizielle, rote oder orange, rutschfeste Pfeile, die die Line to Gain anzeigen und an beiden Seiten des Spielfeldes außerhalb der Seitenlinien auf den Boden gelegt werden. Diese Pfeile sollen rechtwinklig, aus weichem Material und ca. 25x80 cm groß sein. Die Spitze, die aus einem gleichschenkligen Dreieck mit 25 cm Grundlinie besteht, soll zur Seitenlinie zeigen.\n\te) Alle Line to Gain- und Downanzeiger müssen flache Enden haben."
interpretations: []
