src/snapshots/afrotd__parser__tests__rule_1.2.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 8
title: Markierungstafeln und Hindernisse
text: "\ta) Alle Markierungstafeln und Hindernisse innerhalb des Spielortes (Regel 2.31.5) müssen so platziert und konstruiert sein, dass jede mögliche Gefährdung der Spielteilnehmer ausgeschlossen ist. Das beinhaltet jede Gefährdung für jedermann auf den Grenzlinien.\n\tb) Nach der Überprüfung des Spielortes durch die Schiedsrichter muss der Referee anordnen, dass alle Gefahrenquellen innerhalb der Grenzlinien beseitigt werden.\n\tc) Der Referee soll dem Heimteammanagement alle Gefahrenquellen innerhalb des Platzes und außerhalb der Grenzlinien melden. Die abschließende Bewertung von sicherheitsrelevanten Korrekturmaßnahmen unterliegt dem Heimteammanagement.\n\td) Nachdem die Schiedsrichter ihre Inspektion des Platzes vor dem Spiel beendet haben, ist das Heimteammanagement dafür verantwortlich, dass die Sicherheit während des gesamten Spieles gewährleistet ist."
interpretations: []
