src/snapshots/afrotd__parser__tests__rule_1.2.9.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 2
  - 9
title: Feldoberfläche
text: "\ta) Materialien oder Vorrichtungen, die geeignet sind, die Feldoberfläche durch Erhöhen oder Vertiefen zu verändern und somit einem Spieler oder einem Team einen Vorteil verschaffen, sind verboten (Ausnahme: Regel 2.16.4.a bis 2.16.4.c). Strafe: Live Ball Foul, 5 Meter vom Previous Spot [S19].\n\tb) Der Referee kann vom Heimteammanagement jegliche Verbesserung des Feldes verlangen, die zur ordnungsgemäßen und sicheren Durchführung des Spieles erforderlich ist."
interpretations: []
