src/snapshots/afrotd__parser__tests__rule_1.3.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 3
  - 2
title: Aufsicht und Durchführung
text: "\ta) Die Schiedsrichter sollen vor und während des Spieles die Bälle testen und allein entscheiden, welche Bälle (nicht mehr als sechs Bälle pro Team) für das Spiel verwendet werden sollen. Die Schiedsrichter können zusätzliche Bälle zulassen, falls Umstände dies erforderlich machen.\n\tb) Das Heimteam ist für eine Ballpumpe und Messinstrumente verantwortlich.\n\tc) Das Heimteam ist für das Vorhandensein legaler Bälle verantwortlich und muss dem Gegner angeben, mit welchem Ball gespielt werden soll.\n\td) Während des gesamten Spieles darf jedes Team, wenn es in Ballbesitz ist, einen neuen oder nahezu neuen Ball seiner Wahl benutzen, wenn der Ball den Regeln entspricht und vom Referee geprüft wurde.\n\te) Das Gastteam ist verantwortlich für die Beschaffenheit von Bällen ihrer Wahl, wenn es in Ballbesitz ist und die vom Heimteam angebotenen Bälle nicht akzeptiert.\n\tf) Alle Bälle, die benutzt werden sollen, müssen dem Referee 60 Minuten vor Spielbeginn zur Prüfung vorgelegt werden. Sobald die Teams den Schiedsrichtern ihre Spielbälle präsentiert haben, unterliegen diese der Aufsicht der Schiedsrichter während des Spieles.\n\tg) Wird der Ball in einer Seitenzone dead, zum Nachmessen in einer Seitenzone gebraucht, ist er unerreichbar oder wird er illegal, muss ein Ersatzball geholt werden (A.R. 1.3.2.I).\n\th) Der Referee, der Center Judge oder der Umpire sollen feststellen, ob ein Ball den Regeln entspricht, bevor dieser gesnappt wird.\n\ti) Muss ein Ball gemessen werden, muss wie folgt verfahren werden:\n\t\t1. Alle Messungen sollen vorgenommen werden, nachdem der Ball legal aufgepumpt wurde.\n\t\t2. Der Längsumfang muss um die Enden herum, jedoch nicht über die Schnüre gemessen werden.\n\t\t3. Die Länge soll mit einem Zirkel gemessen werden, von einem Ende zum anderen, jedoch nicht in den Kerben.\n\t\t4. Der Querumfang soll um den Ball herum, über das Ventil, über eine Schnur, aber nicht über zwei sich kreuzende Schnüre gemessen werden."
interpretations: []
