src/snapshots/afrotd__parser__tests__rule_1.3.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 3
  - 3
title: Ballmarkierungen
text: "Markieren eines Balles, um dadurch einen Vorteil für einen Spieler oder eine Spielsituation zu erreichen, ist verboten. Strafe: Live Ball Foul. 15 Meter vom Previous Spot [S27]."
interpretations: []
