src/snapshots/afrotd__parser__tests__rule_1.4.11.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 11
title: Verbotene Gegenstände am Spielort
text: "Die Zuständigkeit in Bezug auf das Vorhandensein und des Standortes der Kommunikationsausrüstung (Kameras, Lautsprecher, etc.) innerhalb des Stadions unterliegt dem Heimmanagement.\n\ta) Fernsehapparate oder Monitore sind an den Seitenlinien, der Press Box oder an anderen Orten des Stadions zum Coaching verboten. Videobilder, jede Art von Film, Faxgeräte, Videobänder, Fotografien, Geräte zur Übermittlung von Schriftstücken und Computer dürfen zu keiner Zeit während des Spieles oder zwischen den Perioden von Coaches zum Zwecke des Coachings genutzt werden. Computer, Tablets etc. sind in den Coaches Kabinen nicht erlaubt.\n\tAusnahmen:\n\t\t1. Monitore dürfen nur benutzt werden, um die Fernseh- oder Webübertragungen des laufenden Spieles (Direktübertragung) anzuzeigen. Das Heimteam ist verantwortlich für die Bereitstellung identischer Fernsehgeräte in den Coaches Kabinen beider Teams. Diese Geräte dürfen keine Aufnahme- oder Wiedergabemöglichkeiten enthalten.\n\t\t2. Ein Monitor ist an der Seitenlinie nur zur Verfügung des medizinischen Personals zur Behandlung oder Diagnose verletzter Spielteilnehmer erlaubt.\n\t\t3. Tablets sind als Videowiedergabe des laufenden Spieles nur in den nachfolgenden Fällen erlaubt:\n\t\t\ta. Tablets werden beschränkt auf das laufende Spiel und sie dürfen keine Analysemöglichkeiten, Daten oder Datenzugriffsmöglichkeiten oder andere Kommunikationsmöglichkeiten enthalten. Andere Videos sind nicht erlaubt (beispielsweise Scouting Video, Trainingsvideo, etc.)\n\t\t\tb. Tablets dürfen in den Coaches Kabinen, an der Seitenlinie und in den Teamkabinen genutzt werden. Sie dürfen nicht mit anderen Geräten vernetzt sein, um größere oder zusätzliche Bilder anzuzeigen. (A.R. 1.4.11.II)\n\t\t\tc. Das Video darf die Seitenlinie eines Coaches, die Endzone eines Coaches sowie eine Aufbereitung der Spielzüge des laufenden Spieles zeigen und kann auch Spielumstände wie Down, Distanz, Zeit, Spielviertel, Down und Punkte enthalten.\n\t\t\td. Ein Team darf bis zu 18 Tablets zur Verfügung haben und alle Teammitglieder dürfen die Tablets nutzen.\n\t\t\te. Teammitglieder, die sich mit einem Tablet an einen Schiedsrichter wenden, um ein Video oder ein Replay zu zeigen, begehen automatisch ein unsportliches Verhalten Foul.\n\t\t\tf. Der jeweilige Ligaträger kann eine Richtlinie im Umgang mit Ausfällen von Tablets entwickeln.\n\tb) Es ist nur eine Sprechverbindung zwischen der Press Box und der Teamzone erlaubt. Werden Räumlichkeiten als Coaches Booth (Kabine zur Spielbeobachtung) vorgesehen, müssen sie hinsichtlich Fläche und Standort für das Heimteam und das Gastteam ungefähr gleich sein und sich im Bereich der traditionellen Press Box befinden. Ist keine Press Box vorhanden, ist eine Sprechverbindung zur Teamzone nur in der Verlängerung hinter der jeweiligen Teamzone zwischen den 20-Meterlinien erlaubt. Jede weitere Sprechverbindung für die Belange des Coachings ist verboten. Das gilt auch für Sprechverbindungen von außerhalb des Spielortes (remote coaching).(A.R. 1.4.11.I)\n\tc) Kommunikations-Einrichtungen der Medien, einschließlich Kameras, Schallvorrichtungen, Computer und Mikrofone, sind auf und über dem Feld oder in und über der Teamzone verboten (Regel 2.31.2).\n\tAusnahmen:\n\t\t1. Eine Kamera hinter Pfosten und Querlatte, die am Tor befestigt ist.\n\t\t2. Kameras, die in den Pylonen eingebettet sind.\n\t\t3. Die Schiedsrichter können eine Bodycam ohne Audiokomponente tragen nach Genehmigung durch die für die Liga zuständige Institution.\n\t\t4. Eine Kamera ohne Audiokomponente kann über den Teamzonen und dem Spielfeld, einschließlich der Endzonen, angebracht werden.\n\t\t5. Nach einem Team-Ballbesitzwechsel oder einem Timeout wird eine Kamera eines TV-Senders am Platz erlaubt, um die Auswechselungen der Teams aufzunehmen. Mit der TV-Kamera dürfen die Teamzonen oder ein Huddle nicht betreten werden und sie muss das Feld verlassen, wenn Spieler ein Huddle betreten oder sich in einer Formation aufstellen. Die TV-Kamera ist beschränkt auf die Bereiche außerhalb der Hash Marks.\n\t\t6. Nach einem Touchdown ist eine TV-Kamera in der Endzone erlaubt, um die Reaktionen der Teams aufzunehmen. Die Kamera muss das Feld sofort verlassen, wenn der Ball für den Try spielbereit ist.\n\t\t7. Eine von den 60 Personen, die sich neben den Teammitgliedern in Ausrüstung in einer Teamzone aufhält, darf Videoaufnahmen machen. Dieses Video darf nicht für die Liveübertragung oder ein Videostreaming des Spieles genutzt werden.\n\td) Drohnen sind über dem Feld oder über einer Teamzone nicht erlaubt, wenn Spielteilnehmer auf dem Platz anwesend sind. Außerhalb der Limit Lines wird die Drohnenaktivität durch die BSO geregelt.\n\te) Funkempfänger, die von den Coaches getragen werden, um von Medien Mitteilungen zu erhalten, sind während des Spieles verboten.\n\tf) Mitglieder eines Teams dürfen von Beginn der ersten Periode, bis der Referee das Spielende erklärt, nicht interviewt werden (Ausnahme: Nur Head Coaches dürfen in der Pause zwischen der ersten und der zweiten Spielperiode, der Halbzeit und in der Pause zwischen der dritten und vierten Spielperiode interviewt werden. Die Interviews der Head Coaches zwischen der ersten und zweiten, sowie der dritten und vierten Spielperiode dürfen nicht während Live Aktionen, sondern nur während eines TV-Timeouts stattfinden. Das TV-Timeout darf nicht zum Zwecke des Interviews verlängert werden. Das Interview muss außerhalb der Teamzone durchgeführt werden.).\n\tg) Niemand in der Teamzone oder in der Coaching Box darf künstliche Klangverstärker benutzen, um mit den Spielern auf dem Feld zu kommunizieren.\n\th) Jeder Versuch, entweder durch Ton- oder Filmmittel Signale aufzunehmen, die von gegnerischen Spielern, gegnerischen Coaches oder anderem gegnerischen Teampersonal gegeben werden, ist verboten.\n\ti) Ballpersonen und Mitglieder der Kettencrew dürfen keine Smartuhren oder andere Kommunikations-Technologien benutzen, wenn sie sich auf der gegnerischen Spielfeldseite befinden."
interpretations: []
