src/snapshots/afrotd__parser__tests__rule_1.4.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 2
title: Nummerierung der Spieler
text: "\ta) Alle Teammitglieder eines Teams müssen von 0 bis 99 nummeriert sein. Jede Nummer, der eine Null voransteht (z.B. „00“ oder „07“) , ist illegal.\n\tb) Zwei Teammitglieder des gleichen Teams dürfen nicht die gleiche Nummer tragen.\n\tc) Markierungen in der Nähe der Nummern sind nicht erlaubt. Strafe (a-c): 5 Meter vom Previous Spot – Live Ball Foul [S23].\n\td) Kommt ein Teammitglied ins Spiel, nachdem er seine Trikotnummer geändert hat oder kommt er mit einer anderen als der im Spielbericht vermerkten Trikotnummer ins Spiel, muss er sich sofort beim Referee melden, der wiederum den gegnerischen Head Coach informiert. Der Referee sagt die Änderung der Trikotnummer an und notiert diese Änderung später im Spielbericht. Ein Teammitglied, welches sich nach der Änderung seiner Trikotnummer nicht beim Referee meldet, wird mit einer Strafe für unsportliches Verhalten belegt [S27] (A.R. 1.4.2.I). Strafe (d): 15 Meter vom Previous Spot [S27]. Live Ball Foul. Unsportliches Verhalten. Verursacher eklatanter Verstöße müssen disqualifiziert werden [S47]."
interpretations: []
